--- a/src/playbooks/applications/playbooks_playground.html
+++ b/src/playbooks/applications/playbooks_playground.html
@@ -301,7 +301,7 @@
         function WelcomeScreen() {
             return (
                 <div className="text-center p-8">
-                    <h3 className="text-2xl font-bold mb-4">Welcome to Playbooks!</h3>
+                    <h3 className="text-2xl font-bold mb-4">Welcome to Playbooks Playground!</h3>
                     <p className="text-base-content/70 mb-6">
                         This is a playground to run and interact with Playbooks programs. 
                         It also serves as documentation for how to integrate web UI with Playbooks web server.
@@ -309,7 +309,7 @@
                     <div className="steps steps-vertical lg:steps-horizontal">
                         <div className="step step-primary">
                             <div className="text-left">
-                                <div className="font-semibold">Start Web Server</div>
+                                <div className="font-semibold">Start web server</div>
                                 <div className="text-sm opacity-70">
                                     Run <code className="bg-base-200 px-2 py-1 rounded">
                                         python -m playbooks.applications.web_server
@@ -319,20 +319,20 @@
                         </div>
                         <div className="step step-primary">
                             <div className="text-left">
-                                <div className="font-semibold">Enter Playbook Path</div>
+                                <div className="font-semibold">Enter Playbooks program path</div>
                                 <div className="text-sm opacity-70">Use the default or enter your own</div>
                             </div>
                         </div>
                         <div className="step step-primary">
                             <div className="text-left">
-                                <div className="font-semibold">Run Program</div>
-                                <div className="text-sm opacity-70">Click "Run program" to begin</div>
+                                <div className="font-semibold">Run the program</div>
+                                <div className="text-sm opacity-70">Click "Run Program" to begin</div>
                             </div>
                         </div>
                         <div className="step step-primary">
                             <div className="text-left">
-                                <div className="font-semibold">Chat with AI</div>
-                                <div className="text-sm opacity-70">Interact with your agents in real-time!</div>
+                                <div className="font-semibold">See it in action</div>
+                                <div className="text-sm opacity-70">Watch and interact with the AI agents in real-time!</div>
                             </div>
                         </div>
                     </div>
